# coagent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  config.example.yaml  pyproject.toml
examples/: example_run.py
src/coagent/: __init__.py  advisor.py  cli.py  events.py  executor.py  models.py  policy.py  schemas.py  tracking.py  tui.py
src/hivemind/: __init__.py  _templates.py  advisor.py  cli.py  config.py  executor.py  models.py  policy.py  schemas.py  tracking.py
tests/: conftest.py  test_advisor.py  test_cli.py  test_events.py  test_executor.py  test_models.py  test_policy.py  test_schemas.py  test_tui.py
