[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "litellm>=1.83.0",
    "tavily-python>=0.7.23",
]

[project.scripts]
coagent = "coagent.cli:cli"

[project.optional-dependencies]
tui = ["textual>=0.50.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
anyio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/coagent"]
